cluster/apps/default/test-default-cert/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-cert-test
  namespace: default
  labels:
    app: default-cert-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-cert-test
  template:
    metadata:
      labels:
        app: default-cert-test
    spec:
      containers:
        - name: default-cert-test
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
