cluster/apps/default/test-default-cert/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: default-cert-test
  namespace: default
spec:
  selector:
    app: default-cert-test
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
